--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <body>
     <!-- Шапка -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-flex">
         <a class="header-logo line" lang="en" href="./index.html"
           >Web<span class="header-logo-side">Studio</span></a
@@ -51,7 +51,7 @@
           </li>
         </ul>
       </div>
-    </header>
+    </header> -->
     <!-- Главная часть -->
     <main>
       <!-- Герой -->
@@ -68,7 +68,6 @@
                 </svg>
               </button>
               <!-- Форма модального окна -->
-
               <form class="send">
                 <p class="send__title">Оставьте свои данные, мы вам перезвоним</p>
                 <label class="send__label">
@@ -179,7 +178,7 @@
       <!-- Чем занимаемся -->
       <section class="about section">
         <div class="container">
-          <h2 class="about__title title-margin">Чем мы занимаемся</h2>
+          <h2 class="about__title">Чем мы занимаемся</h2>
           <ul class="about__list list-style">
             <li class="about__item">
               <img
@@ -486,9 +485,9 @@
       <!-- Постоянные клиенты -->
       <section class="customers section">
         <div class="container">
-          <h2 class="customers__title title-margin">Постоянные клиенты</h2>
+          <h2 class="customers__title">Постоянные клиенты</h2>
           <ul class="customers__list list-style">
-            <li>
+            <li class="customers__item">
               <a
                 class="customers__link"
                 href=""
@@ -501,7 +500,7 @@
                 </svg>
               </a>
             </li>
-            <li>
+            <li class="customers__item">
               <a
                 class="customers__link"
                 href=""
@@ -512,7 +511,7 @@
                   <use href="./images/icons.svg#icon-client6"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="customers__item">
               <a
                 class="customers__link"
                 href=""
@@ -523,7 +522,7 @@
                   <use href="./images/icons.svg#icon-client5"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="customers__item">
               <a
                 class="customers__link"
                 href=""
@@ -534,7 +533,7 @@
                   <use href="./images/icons.svg#icon-client4"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="customers__item">
               <a
                 class="customers__link"
                 href=""
@@ -545,7 +544,7 @@
                   <use href="./images/icons.svg#icon-client3"></use></svg
               ></a>
             </li>
-            <li>
+            <li class="customers__item">
               <a
                 class="customers__link"
                 href=""
@@ -646,7 +645,7 @@
           </ul>
         </div>
         <!-- Подпишитесь на рассылку -->
-        <div>
+        <div class="sign">
           <strong class="sign-strong">Подпишитесь на рассылку</strong>
           <form class="form-signup" autocomplete="off">
             <label class="signup-label">
