--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           >Web<span class="header-logo-side">Studio</span></a
         >
         <!-- Кнопка бургера -->
-        <button class="menu-button is-open" type="button" aria-expanded="false" data-menu-button>
+        <button class="menu-button" type="button" aria-expanded="false" data-menu-button>
           <svg
             class="burger-icon"
             width="40"
@@ -41,7 +41,7 @@
           </svg>
         </button>
         <!-- Мобильное меню -->
-        <div class="menu-container is-open" id="menu-container" data-menu>
+        <div class="menu-container" id="menu-container" data-menu>
           <ul class="mobile-nav list">
             <li class="mobile-nav-item">
               <a class="mobile-nav-link accent line" href="./index.html">Студия</a>
