--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@
           >Web<span class="header-logo-side">Studio</span></a
         >
         <!-- Кнопка бургера -->
-        <button class="menu-button is-open" type="button" aria-expanded="false" data-menu-button>
+        <button class="menu-button" type="button" aria-expanded="false" data-menu-button>
           <svg
             class="burger-icon"
             width="40"
@@ -39,7 +39,7 @@
           </svg>
         </button>
         <!-- Мобильное меню -->
-        <div class="menu-container is-open" 
+        <div class="menu-container" 
         id="menu-container" data-menu>
           <ul class="mobile-nav list">
             <li class="mobile-nav-item"><a class="mobile-nav-link line" href="./index.html">Студия</a></li>
